# gen/pb-go/flyteidl/admin/matchable_resource.pb.go
@@ -464,8 +464,8 @@ func (m *MatchableResourceConfiguration) GetWorkflow() string {
 }
 
 type ListMatchableResourcesRequest struct {
-	Type                 MatchableResource `protobuf:"varint,1,opt,name=type,proto3,enum=flyteidl.admin.MatchableResource" json:"type,omitempty"`
-	Domain               string            `protobuf:"bytes,2,opt,name=domain,proto3" json:"domain,omitempty"`
+	Domain               string            `protobuf:"bytes,1,opt,name=domain,proto3" json:"domain,omitempty"`
+	ResourceType         MatchableResource `protobuf:"varint,2,opt,name=resource_type,json=resourceType,proto3,enum=flyteidl.admin.MatchableResource" json:"resource_type,omitempty"`
 	XXX_NoUnkeyedLiteral struct{}          `json:"-"`
 	XXX_unrecognized     []byte            `json:"-"`
 	XXX_sizecache        int32             `json:"-"`
@@ -496,18 +496,18 @@ func (m *ListMatchableResourcesRequest) XXX_DiscardUnknown() {
 
 var xxx_messageInfo_ListMatchableResourcesRequest proto.InternalMessageInfo
 
-func (m *ListMatchableResourcesRequest) GetType() MatchableResource {
-	if m != nil {
-		return m.Type
-	}
-	return MatchableResource_TASK_RESOURCE
-}
-
 func (m *ListMatchableResourcesRequest) GetDomain() string {
 	if m != nil {
 		return m.Domain
 	}
 	return ""
+}
+
+func (m *ListMatchableResourcesRequest) GetResourceType() MatchableResource {
+	if m != nil {
+		return m.ResourceType
+	}
+	return MatchableResource_TASK_RESOURCE
 }
 
 type ListMatchableResourcesResponse struct {
@@ -568,48 +568,49 @@ func init() {
 }
 
 var fileDescriptor_1d15bcabb02640f4 = []byte{
-	// 682 bytes of a gzipped FileDescriptorProto
-	0x1f, 0x8b, 0x08, 0x00, 0x00, 0x00, 0x00, 0x00, 0x02, 0xff, 0x8c, 0x55, 0x6f, 0x6f, 0xd3, 0x3e,
-	0x10, 0x6e, 0xd6, 0xfd, 0xfa, 0xdb, 0x6e, 0x62, 0xeb, 0xcc, 0xfe, 0x64, 0x9b, 0x98, 0x46, 0x24,
-	0x60, 0x20, 0x2d, 0x15, 0x9d, 0x90, 0x06, 0x82, 0x17, 0x6b, 0x15, 0xa9, 0x88, 0x8e, 0x69, 0x6e,
-	0x8b, 0x80, 0x37, 0x95, 0x93, 0xba, 0x69, 0x68, 0x12, 0x67, 0x89, 0xcd, 0x96, 0x6f, 0xc1, 0x67,
-	0x41, 0xe2, 0x0d, 0x9f, 0x0e, 0x25, 0x4d, 0xda, 0x34, 0x6b, 0x60, 0xef, 0x7c, 0xe7, 0xbb, 0x7b,
-	0x1e, 0x3f, 0x77, 0xb6, 0xe1, 0xd9, 0xd0, 0x0e, 0x39, 0xb5, 0x06, 0x76, 0x8d, 0x0c, 0x1c, 0xcb,
-	0xad, 0x39, 0x84, 0x1b, 0x23, 0xa2, 0xdb, 0xb4, 0xef, 0xd3, 0x80, 0x09, 0xdf, 0xa0, 0xaa, 0xe7,
-	0x33, 0xce, 0xd0, 0x7a, 0x1a, 0xa8, 0xc6, 0x81, 0xca, 0x08, 0xaa, 0x5d, 0x12, 0x8c, 0x71, 0x12,
-	0xd5, 0xf1, 0xa8, 0x81, 0xaa, 0x50, 0x36, 0x3c, 0x21, 0x4b, 0x47, 0xd2, 0xf1, 0x2a, 0x8e, 0x96,
-	0x91, 0xc7, 0xf4, 0x84, 0xbc, 0x34, 0xf1, 0x98, 0x9e, 0x40, 0x3b, 0x50, 0x71, 0xa8, 0xc3, 0xfc,
-	0x50, 0x2e, 0xc7, 0xce, 0xc4, 0x42, 0x32, 0xfc, 0x1f, 0x70, 0xe6, 0x13, 0x93, 0xca, 0xcb, 0xf1,
-	0x46, 0x6a, 0x2a, 0x3f, 0x24, 0xd8, 0xc9, 0x42, 0x9d, 0x73, 0xee, 0x5b, 0xba, 0xe0, 0x34, 0x40,
-	0x6f, 0x61, 0x65, 0x40, 0x87, 0x44, 0xd8, 0x3c, 0x88, 0x51, 0xd7, 0xea, 0x47, 0xea, 0x3c, 0x4f,
-	0x35, 0x4f, 0x12, 0x4f, 0x33, 0xd0, 0x19, 0x54, 0x6c, 0xcb, 0xb1, 0x78, 0x10, 0xf3, 0xbb, 0x4f,
-	0x6e, 0x12, 0xaf, 0xfc, 0x92, 0x60, 0xaf, 0x69, 0x8b, 0x80, 0x53, 0x7f, 0x01, 0xab, 0x2f, 0x00,
-	0x64, 0x6a, 0xc9, 0xd2, 0x51, 0xf9, 0x78, 0xad, 0xfe, 0x3a, 0x5f, 0xbb, 0x30, 0x5d, 0x9d, 0x2d,
-	0x35, 0x97, 0xfb, 0x21, 0xce, 0x14, 0xdb, 0x7f, 0x07, 0x1b, 0xb9, 0xed, 0x48, 0xe2, 0x31, 0x0d,
-	0x53, 0xd1, 0xc7, 0x34, 0x44, 0x5b, 0xf0, 0xdf, 0x77, 0x62, 0x0b, 0x9a, 0xc8, 0x3e, 0x31, 0xde,
-	0x2c, 0x9d, 0x49, 0x8a, 0x0a, 0xb2, 0x76, 0x4b, 0x0d, 0xc1, 0x2d, 0xe6, 0x5e, 0x09, 0x2a, 0xb2,
-	0xac, 0x11, 0x2c, 0x73, 0x62, 0x4e, 0xf8, 0xae, 0xe2, 0x78, 0xad, 0x9c, 0xc0, 0xf6, 0x34, 0x3e,
-	0x21, 0xdc, 0x26, 0x3a, 0xb5, 0x67, 0x10, 0x52, 0x06, 0x42, 0xf9, 0x5d, 0x06, 0x74, 0x11, 0x0d,
-	0x90, 0xe5, 0x9a, 0x99, 0xca, 0x3a, 0xc8, 0x9c, 0x04, 0xe3, 0xe9, 0x44, 0xf5, 0xe7, 0xd4, 0x89,
-	0x94, 0x7f, 0xfa, 0x37, 0xe5, 0x67, 0x95, 0x5a, 0x25, 0xbc, 0xc3, 0x17, 0x4f, 0xc2, 0x18, 0x0e,
-	0x8c, 0x09, 0xc1, 0x85, 0x30, 0x93, 0x06, 0x3f, 0xbf, 0x77, 0x13, 0x5a, 0x25, 0xbc, 0x67, 0x14,
-	0x36, 0x78, 0x04, 0xfb, 0x34, 0x95, 0xa5, 0x7f, 0x1d, 0xe9, 0x98, 0xc5, 0x2a, 0xc7, 0x58, 0xc7,
-	0x79, 0xac, 0x22, 0xe1, 0x5b, 0x25, 0x2c, 0xd3, 0xa2, 0xa6, 0xf4, 0x61, 0x77, 0x86, 0x94, 0x1e,
-	0xd0, 0x8e, 0x5a, 0x10, 0xdf, 0x92, 0xb5, 0xfa, 0x93, 0x42, 0x98, 0x6c, 0xbf, 0x5a, 0x25, 0xbc,
-	0x4d, 0x17, 0x6d, 0x34, 0x56, 0xa0, 0xc2, 0x89, 0x6f, 0x52, 0xae, 0xfc, 0x94, 0xe0, 0xf0, 0x22,
-	0xbd, 0xfd, 0xe9, 0xa1, 0x9b, 0xcc, 0x1d, 0x5a, 0xa6, 0xf0, 0x49, 0x94, 0x88, 0x1a, 0xb9, 0xc1,
-	0x8e, 0x08, 0x28, 0x79, 0x02, 0x77, 0x07, 0x20, 0x3b, 0xc1, 0xd1, 0xfd, 0x1f, 0x30, 0x87, 0x58,
-	0x6e, 0x32, 0x9d, 0x89, 0x15, 0xdd, 0x7f, 0xcf, 0x67, 0xdf, 0xa8, 0xc1, 0x93, 0x87, 0x21, 0x35,
-	0xd1, 0x3e, 0xac, 0xdc, 0x30, 0x7f, 0x3c, 0xb4, 0xd9, 0x4d, 0xf2, 0x34, 0x4c, 0x6d, 0xc5, 0x85,
-	0x47, 0x6d, 0x2b, 0xe0, 0x77, 0x78, 0x07, 0x98, 0x5e, 0x0b, 0x1a, 0x70, 0xf4, 0x0a, 0x96, 0x79,
-	0xe8, 0x4d, 0xe6, 0x74, 0xbd, 0xfe, 0x78, 0x21, 0xd9, 0x6c, 0x22, 0x8e, 0xc3, 0x8b, 0x58, 0x2a,
-	0xb7, 0x70, 0x58, 0x84, 0x17, 0x78, 0xcc, 0x0d, 0x28, 0xfa, 0x04, 0xeb, 0x46, 0x56, 0xb4, 0xf4,
-	0x01, 0x50, 0xff, 0x09, 0x3d, 0xa7, 0x35, 0xce, 0x55, 0x79, 0xe1, 0xc2, 0xe6, 0x9d, 0x0c, 0xb4,
-	0x09, 0x0f, 0xba, 0xe7, 0x9d, 0x0f, 0x7d, 0xac, 0x75, 0x2e, 0x7b, 0xb8, 0xa9, 0x55, 0x4b, 0x68,
-	0x0b, 0xaa, 0xcd, 0x76, 0xaf, 0xd3, 0xd5, 0xf0, 0xcc, 0x2b, 0xa1, 0x87, 0xb0, 0xa1, 0x7d, 0xd6,
-	0x9a, 0xbd, 0xee, 0xfb, 0xcb, 0x8f, 0xfd, 0xab, 0x9e, 0xd6, 0xd3, 0xaa, 0x4b, 0xe8, 0x00, 0x76,
-	0x67, 0xce, 0x34, 0xa9, 0x7d, 0xde, 0xd0, 0xda, 0xd5, 0x72, 0xe3, 0xf4, 0xeb, 0x4b, 0xd3, 0xe2,
-	0x23, 0xa1, 0xab, 0x06, 0x73, 0x6a, 0x76, 0x38, 0xe4, 0xb5, 0xe9, 0x57, 0x61, 0x52, 0xb7, 0xe6,
-	0xe9, 0x27, 0x26, 0xab, 0xcd, 0xff, 0x1e, 0x7a, 0x25, 0xfe, 0x2b, 0x4e, 0xff, 0x04, 0x00, 0x00,
-	0xff, 0xff, 0x5f, 0xd9, 0x65, 0xc2, 0x56, 0x06, 0x00, 0x00,
+	// 691 bytes of a gzipped FileDescriptorProto
+	0x1f, 0x8b, 0x08, 0x00, 0x00, 0x00, 0x00, 0x00, 0x02, 0xff, 0x8c, 0x55, 0x5f, 0x6f, 0xd3, 0x30,
+	0x10, 0x6f, 0xd6, 0x51, 0xb6, 0x1b, 0xdb, 0x3a, 0xb3, 0x3f, 0xd9, 0x26, 0xa6, 0x11, 0x09, 0x18,
+	0x48, 0x4b, 0x45, 0xf7, 0x32, 0x10, 0x3c, 0xac, 0x55, 0x50, 0x11, 0x1d, 0xd3, 0xdc, 0x16, 0x01,
+	0x2f, 0x95, 0x9b, 0xba, 0x69, 0x68, 0x12, 0x67, 0x89, 0xcd, 0x96, 0x27, 0xbe, 0x02, 0x9f, 0x05,
+	0x89, 0x17, 0x3e, 0x1d, 0x4a, 0x9a, 0xa4, 0x69, 0xd6, 0xc2, 0xde, 0x7c, 0xf6, 0xdd, 0xfd, 0x7e,
+	0xfe, 0xdd, 0x9d, 0x0d, 0xcf, 0x06, 0x56, 0xc0, 0xa9, 0xd9, 0xb7, 0x2a, 0xa4, 0x6f, 0x9b, 0x4e,
+	0xc5, 0x26, 0x5c, 0x1f, 0x92, 0x9e, 0x45, 0xbb, 0x1e, 0xf5, 0x99, 0xf0, 0x74, 0xaa, 0xba, 0x1e,
+	0xe3, 0x0c, 0xad, 0x25, 0x8e, 0x6a, 0xe4, 0xa8, 0x0c, 0xa1, 0xdc, 0x26, 0xfe, 0x08, 0xc7, 0x5e,
+	0x2d, 0x97, 0xea, 0xa8, 0x0c, 0x45, 0xdd, 0x15, 0xb2, 0x74, 0x28, 0x1d, 0x2d, 0xe3, 0x70, 0x19,
+	0xee, 0x18, 0xae, 0x90, 0x17, 0xc6, 0x3b, 0x86, 0x2b, 0xd0, 0x36, 0x94, 0x6c, 0x6a, 0x33, 0x2f,
+	0x90, 0x8b, 0xd1, 0x66, 0x6c, 0x21, 0x19, 0xee, 0xfb, 0x9c, 0x79, 0xc4, 0xa0, 0xf2, 0x62, 0x74,
+	0x90, 0x98, 0xca, 0x4f, 0x09, 0xb6, 0xb3, 0x50, 0x67, 0x9c, 0x7b, 0x66, 0x4f, 0x70, 0xea, 0xa3,
+	0x37, 0xb0, 0xd4, 0xa7, 0x03, 0x22, 0x2c, 0xee, 0x47, 0xa8, 0x2b, 0xd5, 0x43, 0x75, 0x9a, 0xa7,
+	0x9a, 0x27, 0x89, 0xd3, 0x08, 0x74, 0x0a, 0x25, 0xcb, 0xb4, 0x4d, 0xee, 0x47, 0xfc, 0xee, 0x12,
+	0x1b, 0xfb, 0x2b, 0xbf, 0x25, 0xd8, 0xad, 0x5b, 0xc2, 0xe7, 0xd4, 0x9b, 0xc1, 0xea, 0x0b, 0x00,
+	0x49, 0x2d, 0x59, 0x3a, 0x2c, 0x1e, 0xad, 0x54, 0x5f, 0xe5, 0x73, 0xcf, 0x0d, 0x57, 0x27, 0x4b,
+	0xcd, 0xe1, 0x5e, 0x80, 0x33, 0xc9, 0xf6, 0xde, 0xc2, 0x7a, 0xee, 0x38, 0x94, 0x78, 0x44, 0x83,
+	0x44, 0xf4, 0x11, 0x0d, 0xd0, 0x26, 0xdc, 0xfb, 0x4e, 0x2c, 0x41, 0x63, 0xd9, 0xc7, 0xc6, 0xeb,
+	0x85, 0x53, 0x49, 0x51, 0x41, 0xd6, 0x6e, 0xa8, 0x2e, 0xb8, 0xc9, 0x9c, 0x4b, 0x41, 0x45, 0x96,
+	0x35, 0x82, 0x45, 0x4e, 0x8c, 0x31, 0xdf, 0x65, 0x1c, 0xad, 0x95, 0x63, 0xd8, 0x4a, 0xfd, 0x63,
+	0xc2, 0x4d, 0xd2, 0xa3, 0xd6, 0x04, 0x42, 0xca, 0x40, 0x28, 0x7f, 0x8a, 0x80, 0xce, 0xc3, 0x06,
+	0x32, 0x1d, 0x23, 0x93, 0xb9, 0x07, 0x32, 0x27, 0xfe, 0x28, 0xed, 0xa8, 0xee, 0x94, 0x3a, 0xa1,
+	0xf2, 0x4f, 0xff, 0xa5, 0xfc, 0x24, 0x53, 0xa3, 0x80, 0xb7, 0xf9, 0xec, 0x4e, 0x18, 0xc1, 0xbe,
+	0x3e, 0x26, 0x38, 0x13, 0x66, 0x5c, 0xe0, 0xe7, 0x77, 0x2e, 0x42, 0xa3, 0x80, 0x77, 0xf5, 0xb9,
+	0x05, 0x1e, 0xc2, 0x1e, 0x4d, 0x64, 0xe9, 0x5e, 0x85, 0x3a, 0x66, 0xb1, 0x8a, 0x11, 0xd6, 0x51,
+	0x1e, 0x6b, 0x9e, 0xf0, 0x8d, 0x02, 0x96, 0xe9, 0xbc, 0xa2, 0x74, 0x61, 0x67, 0x82, 0x94, 0x5c,
+	0xd0, 0x0a, 0x4b, 0x10, 0x4d, 0xc9, 0x4a, 0xf5, 0xc9, 0x5c, 0x98, 0x6c, 0xbd, 0x1a, 0x05, 0xbc,
+	0x45, 0x67, 0x1d, 0xd4, 0x96, 0xa0, 0xc4, 0x89, 0x67, 0x50, 0xae, 0xfc, 0x92, 0xe0, 0xe0, 0x3c,
+	0x99, 0xfe, 0xe4, 0xd2, 0x75, 0xe6, 0x0c, 0x4c, 0x43, 0x78, 0x24, 0x0c, 0x44, 0xb5, 0x5c, 0x63,
+	0x87, 0x04, 0x94, 0x3c, 0x81, 0xdb, 0x0d, 0x90, 0xed, 0xe0, 0x70, 0xfe, 0xfb, 0xcc, 0x26, 0xa6,
+	0x13, 0x77, 0x67, 0x6c, 0x85, 0xf3, 0xef, 0x7a, 0xec, 0x1b, 0xd5, 0x79, 0xfc, 0x30, 0x24, 0x26,
+	0xda, 0x83, 0xa5, 0x6b, 0xe6, 0x8d, 0x06, 0x16, 0xbb, 0x8e, 0x9f, 0x86, 0xd4, 0x56, 0x7e, 0xc0,
+	0xa3, 0xa6, 0xe9, 0xf3, 0x5b, 0xbc, 0x7d, 0x4c, 0xaf, 0x04, 0xf5, 0x79, 0x06, 0x4e, 0x9a, 0x82,
+	0x7b, 0x07, 0xab, 0x69, 0x9f, 0xf0, 0xc0, 0x1d, 0xcf, 0xca, 0x5a, 0xf5, 0xf1, 0xcc, 0xdb, 0x64,
+	0x33, 0xe3, 0x07, 0x49, 0x5c, 0x3b, 0x70, 0xa9, 0x72, 0x03, 0x07, 0xf3, 0x08, 0xf8, 0x2e, 0x73,
+	0x7c, 0x8a, 0x3e, 0xc1, 0x9a, 0x9e, 0x55, 0x31, 0x79, 0x11, 0xd4, 0xff, 0x42, 0x4d, 0x89, 0x8f,
+	0x73, 0x59, 0x5e, 0x38, 0xb0, 0x71, 0x2b, 0x02, 0x6d, 0xc0, 0x6a, 0xfb, 0xac, 0xf5, 0xa1, 0x8b,
+	0xb5, 0xd6, 0x45, 0x07, 0xd7, 0xb5, 0x72, 0x01, 0x6d, 0x42, 0xb9, 0xde, 0xec, 0xb4, 0xda, 0x1a,
+	0x9e, 0xec, 0x4a, 0xe8, 0x21, 0xac, 0x6b, 0x9f, 0xb5, 0x7a, 0xa7, 0xfd, 0xfe, 0xe2, 0x63, 0xf7,
+	0xb2, 0xa3, 0x75, 0xb4, 0xf2, 0x02, 0xda, 0x87, 0x9d, 0xc9, 0x66, 0x12, 0xd4, 0x3c, 0xab, 0x69,
+	0xcd, 0x72, 0xb1, 0x76, 0xf2, 0xf5, 0xa5, 0x61, 0xf2, 0xa1, 0xe8, 0xa9, 0x3a, 0xb3, 0x2b, 0x56,
+	0x30, 0xe0, 0x95, 0xf4, 0xef, 0x30, 0xa8, 0x53, 0x71, 0x7b, 0xc7, 0x06, 0xab, 0x4c, 0x7f, 0x27,
+	0xbd, 0x52, 0xf4, 0x79, 0x9c, 0xfc, 0x0d, 0x00, 0x00, 0xff, 0xff, 0x8b, 0x90, 0xce, 0x4a, 0x67,
+	0x06, 0x00, 0x00,
 }
