# gen/pb-go/flyteidl/admin/matchable_resource.pb.validate.go
@@ -612,9 +612,9 @@ func (m *ListMatchableResourcesRequest) Validate() error {
 		return nil
 	}
 
-	// no validation rules for Type
-
 	// no validation rules for Domain
+
+	// no validation rules for ResourceType
 
 	return nil
 }
